# drishti-energy-intel

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  Dockerfile  Dockerfile.static  README.md  cloudbuild.static-image.yaml  cloudbuild.static.yaml  eslint.config.mjs  firebase.json  next.config.ts  nginx.static.conf  package-lock.json  package.json
agent-registry/: sentinelmesh.agent.json
app/: globals.css  page.tsx
app/mobile/: page.tsx
app/nfc/: page.tsx
cloudrun-gateway/: server.mjs  service.yaml
components/: AgentControlPlane.tsx  CitizenImpactPanel.tsx  CrisisAlertModal.tsx  CrisisPanel.tsx  Globe.tsx  MissionGraph.tsx  PriceChart.tsx  RiskFeed.tsx  SPRCountdown.tsx  TrustStack.tsx
docs/: HACKATHON_RUNBOOK.md  LIVE_DATA_SOURCES.md  NASIKO_INTEGRATION.md  SUPABASE_BACKEND_GCP_FRONTEND.md
lib/: agents.ts  ai.ts  client-api.ts  live-data.ts  mock-data.ts  nasiko.ts  openai.ts  sentinel-types.ts  source-cache.ts  supabase.ts
mobile/: App.tsx  app.json  constants.ts  package.json
mobile/components/: hud.tsx
mobile/lib/: api.ts
nasiko-agents/sentinelmesh-crisis-agent/: Agentcard.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nasiko-agents/sentinelmesh-crisis-agent/src/: __main__.py
prompts/: PINNACLE_MASTER_PROMPT.md
scripts/: build-static.mjs  deploy-gcp-frontend.mjs  setup-local-env.sh
supabase/: config.toml  schema.sql  seed.sql
supabase/migrations/: 20260622105925_initial_schema.sql  20260622200000_telegram_chats.sql  20260626090000_sentinelmesh_agent_tables.sql
telegram/: bot.ts  start.ts
(+28 files in other folders)
