[project]
name = "sentinelmesh-crisis-agent"
version = "1.0.0"
description = "Nasiko-compatible DRISHTI SentinelMesh crisis agent."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"
